<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tickmate</string>
    <string name="action_settings">Settings</string>
    <string name="title_section_ticks">My ticks</string>
    <string name="title_section_weeks">Weeks</string>
    <string name="title_section_months">Months</string>
    <string name="title_activity_edit_tracks">My tracks</string>
    <string name="my_tracks">My tracks</string>
    <string name="title_activity_choose_track">Add track</string>
    <string name="choose_track">Add track</string>
    <string name="title_activity_edit_track">Edit track</string>
    <string name="edit_description_hint">Description</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="inactive">inactive</string>
    <string name="edit">Edit</string>
    <string name="deactivate">Deactivate</string>
    <string name="delete">Delete</string>
    <string name="title_activity_show_track">Track details</string>
    <string name="title_section_weekdays">Days of week</string>
    <string name="numer_of_occurances">Number of occurrences:</string>
    <string name="no_tracks_found">No tracks have been added. Tap here to open the track list editor.</string>
    <string name="multiple_entries">Multiple entries per day</string>
    <string name="tick_deleted">Removed last tick.</string>
    <string name="alert_delete_track_title">Delete track</string>
    <string name="jump_to_date">Jump to date…</string>
    <string name="jump_to_today">Jump to today</string>
    <string name="title_activity_about">About Tickmate</string>
    <string name="title_icon_chooser">Choose an icon</string>
    <string name="about_description">Tickmate is basically a one bit journal. For each day, you can specify 
        whether something has occurred or not. The occurrences can be arbitrary things, like flossing your 
        teeth or having a drink. You are able to quantify your habits and the accumulated data can be 
        displayed for the past weeks or months to track changes over time. This way, it may help you to 
        get over your old habits or embody new ones.
\n\nTickmate is open source, GPLv3 licensed software.
\n\nContains icons from the Glyphicons FREE icon set (CC-BY-3.0)
    </string>
    <string name="import_db">Import database</string>
    <string name="export_db">Backup database</string>
    <string name="import_db_success">Database imported successfully.</string>
    <string name="export_db_success">Database exported successfully. </string>
    <string name="import_db_none_found">No backup databases have been found.</string>
    <string name="import_db_really">Are you sure that you want to import the selected database? This will replace all tracks and ticks and will NOT be reversible.</string>
    <string name="show_track_total">Total</string>
    <string name="show_track_weeklymean">Weekly mean</string>
    <string name="show_track_dayssincelast">Days since last</string>
    
    <!-- New in 1.2.0 -->
    
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="activate">Activate</string>
    <string name="track_name">Name</string>
    <string name="track_enabled">Enabled</string>
    <string name="track_icon">Symbol</string>
    <string name="title_section_quarters">Quarters</string>
    
    <!--  New or updated in master / might change until release -->
    <string name="alert_delete_track_message">Are you sure you want to delete this track? This can not be undone and your ticks will be lost unless you made a backup.</string>
    
</resources>
