<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

        <de.smasi.tickmate.views.IconPreference
               android:icon="@drawable/glyphicons_334_candle_white"
                android:key="icon"
                android:title="@string/track_icon"
                 />
     
        <EditTextPreference
                android:key="name"
                android:title="@string/track_name"
                 />

        <EditTextPreference
                android:key="description"
                android:title="@string/edit_description_hint"
                />
         
        <CheckBoxPreference
                android:key="enabled"
                android:title="@string/track_enabled"
               
                />
        
        <CheckBoxPreference
                android:key="multiple_entries_enabled"
                android:title="@string/multiple_entries"
                />
    
</PreferenceScreen>